--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Studenti:
 
-+ Razvan-Andrei Matisan - razvan_andrei.matisan@stud.acs.upb.ro
++ Razvan-Andrei Matisan - razvan.matisan@stud.acs.upb.ro
 + Radu-Stefan Minea     - radu_stefan.minea@stud.acs.upb.ro 
 
 Seria: CA
