--- a/README
+++ b/README
@@ -18,6 +18,36 @@ stiintfice prelaute dintr-o baza de date de peste 100k astfel de elemente.
 Programul raspunde la query-uri folosind cele mai recente date salvate. 
 
 ===============================================================================
+## Rulare
+
+1. Construirea programului:
+
+    * User-ul introduce in terminal:
+        make -f Makefile_tema3
+        make
+        
+2. Executarea programului:
+
+    * User-ul isi trece paper-urile pe care vrea sa le adauge in sistem, dar
+    si query-urile pe care vrea sa le faca asupra acestora intr-un fisier de
+    tipul <input.in>. Query-uri disponibile:
+        + add_paper <paper_id>
+        + get_oldest_influence <paper_id>
+        + get_venue_impact_factor <venue_name>
+        + get_number_of_influenced_papers <paper_id> <max_distance>
+        + get_number_of_papers_between_dates <earliest_date> <latest_date>
+        + get_number_of_authors_with_field <institution_name> <field_name>
+        + get_histogram_of_citations <author_id> <number_of_years>
+    
+    * Pentru a verifica daca programul furnizeaza output-ul corect, se creeaza
+    un fisier de tip <reference.out>
+    
+    * Pentru a executa programul, user-ul introduce in terminal:
+        ./tema3 <input.in> <reference.out>
+        
+    * Daca in terminal nu este furnizat niciun mesaj de tip eroare, inseamna ca
+    a fost furnizat output-ul asteptat.
+===============================================================================
 ## Structura proiectului
 
 Rezolvarea temei este impartita pe mai multe fisiere .c sau .h care sunt
